Use ProcessBuilder and redirected log file for HDFS Extract