@@ -19,8 +19,8 @@ import com.jcraft.jsch.ChannelSftp;
 import com.jcraft.jsch.JSch;
 import com.jcraft.jsch.JSchException;
 import com.jcraft.jsch.Session;
-
 import com.jcraft.jsch.SftpException;
+
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
@@ -32,8 +32,11 @@ import java.io.StringWriter;
 import java.net.URL;
 import java.util.Properties;
 import java.lang.reflect.*;
-import metadata.etl.EtlJob;
+import java.lang.ProcessBuilder;
+
 import org.apache.commons.io.FileUtils;
+
+import metadata.etl.EtlJob;
 import wherehows.common.Constant;
 
 
@@ -84,8 +87,8 @@ public class HdfsMetadataEtl extends EtlJob {
     File dest = new File(remoteJarFile);
     try {
         FileUtils.copyURLToFile(localJarUrl, dest);
-    } catch(Exception e) { 
-        logger.error(e.toString()); 
+    } catch(Exception e) {
+        logger.error(e.toString());
     }
 
     String outputSchemaFile = prop.getProperty(Constant.HDFS_SCHEMA_LOCAL_PATH_KEY);
@@ -95,20 +98,23 @@ public class HdfsMetadataEtl extends EtlJob {
     String numOfThread = prop.getProperty(Constant.HDFS_NUM_OF_THREAD_KEY, String.valueOf(1));
     String hdfsUser = prop.getProperty(Constant.HDFS_REMOTE_USER_KEY);
     String hdfsKeyTab = prop.getProperty(Constant.HDFS_REMOTE_KEYTAB_LOCATION_KEY);
+    String hdfsExtractLogFile = outputSchemaFile + ".log";
 
-    String execCmd =
-            "hadoop jar " + remoteJarFile
-            + " -D " + Constant.HDFS_SCHEMA_REMOTE_PATH_KEY + "=" + outputSchemaFile
-            + " -D " + Constant.HDFS_SAMPLE_REMOTE_PATH_KEY + "=" + outputSampleDataFile
-            + " -D " + Constant.HDFS_CLUSTER_KEY + "=" + cluster
-            + " -D " + Constant.HDFS_WHITE_LIST_KEY + "=" + whiteList
-            + " -D " + Constant.HDFS_NUM_OF_THREAD_KEY + "=" + numOfThread
-            + " -D " + Constant.HDFS_REMOTE_USER_KEY + "=" + hdfsUser
-            + " -D log_file_name=hdfs_schema_fetch" 
-            + " -D " + Constant.HDFS_REMOTE_KEYTAB_LOCATION_KEY + "=" + hdfsKeyTab;
-    //logger.info("executue remote command : " + execCmd);
+    String[] hadoopCmd = {"hadoop", "jar", remoteJarFile,
+            "-D" + Constant.HDFS_SCHEMA_REMOTE_PATH_KEY + "=" + outputSchemaFile,
+            "-D" + Constant.HDFS_SAMPLE_REMOTE_PATH_KEY + "=" + outputSampleDataFile,
+            "-D" + Constant.HDFS_CLUSTER_KEY + "=" + cluster,
+            "-D" + Constant.HDFS_WHITE_LIST_KEY + "=" + whiteList,
+            "-D" + Constant.HDFS_NUM_OF_THREAD_KEY + "=" + numOfThread,
+            "-D" + Constant.HDFS_REMOTE_USER_KEY + "=" + hdfsUser,
+            "-D" + Constant.HDFS_REMOTE_KEYTAB_LOCATION_KEY + "=" + hdfsKeyTab,
+            "-Dlog.file.name=hdfs_schema_fetch" };
 
-    Process process = Runtime.getRuntime().exec(execCmd);
+    ProcessBuilder pb = new ProcessBuilder(hadoopCmd);
+    File logFile = new File(hdfsExtractLogFile);
+    pb.redirectErrorStream(true);
+    pb.redirectOutput(ProcessBuilder.Redirect.appendTo(logFile));
+    Process process = pb.start();
     int pid = -1;
     if(process.getClass().getName().equals("java.lang.UNIXProcess")) {
         /* get the PID on unix/linux systems */
@@ -119,22 +125,7 @@ public class HdfsMetadataEtl extends EtlJob {
         } catch (Throwable e) {
         }
     }
-    logger.info("executue remote command [PID=" + pid + "]: " + execCmd);
-
-    BufferedInputStream stdout = new BufferedInputStream(process.getInputStream());
-    byte[] bytes = new byte[4096];
-    while (stdout.read(bytes) != -1) {}
-
-    String line = null;
-    /* @need to redo this part using ProcessBuilder + redirection      
-    InputStream stdout = process.getInputStream();
-    InputStreamReader isr = new InputStreamReader(stdout);
-    BufferedReader br = new BufferedReader(isr);
-    
-
-    while ( (line = br.readLine()) != null) {
-      logger.info(line);
-    }*/
+    logger.info("executue command [PID=" + pid + "]: " + hadoopCmd);
 
     // wait until this process finished.
     int execResult = process.waitFor();
@@ -142,7 +133,8 @@ public class HdfsMetadataEtl extends EtlJob {
     // if the process failed, log the error and throw exception
     if (execResult > 0) {
       BufferedReader br = new BufferedReader(new InputStreamReader(process.getErrorStream()));
-      String errString = "Error Details:\n";
+      String errString = "HDFS Metadata Extract Error:\n";
+      String line = "";
       while((line = br.readLine()) != null)
         errString = errString.concat(line).concat("\n");
       logger.error("*** Process  failed, status: " + execResult);
@@ -230,7 +222,7 @@ public class HdfsMetadataEtl extends EtlJob {
       }
 
       logger.info("ExecChannel exit-status: " + execChannel.getExitStatus());
-      
+
       execChannel.disconnect();
 
       // scp back the result
